--- a/compose.yaml
+++ b/compose.yaml
@@ -5,12 +5,26 @@ services:
       - "5432:5432"
     volumes:
       - ./volumes/postgres:/var/lib/postgresql/data/
+      - ./initdb:/docker-entrypoint-initdb.d/
     environment:
       - POSTGRES_DB=shareit
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=12345
+      - TZ=Asia/Yekaterinburg
     healthcheck:
-      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      test: ["CMD-SHELL", "pg_isready -q -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
       timeout: 5s
       interval: 5s
       retries: 10
+
+  app:
+    image: shareit-image
+    environment:
+      - POSTGRES_DB=shareit
+      - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=12345
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - "8080:8080"
