--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=INFO
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=INFO
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=dbuser
-spring.datasource.password=12345
+spring.datasource.url=jdbc:postgresql://db:5432/${POSTGRES_DB}?serverTimezone=UTC
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
